fix styling on mobile for resume page

--- a/src/css/pages/resume.module.scss
+++ b/src/css/pages/resume.module.scss
@@ -8,6 +8,8 @@
   & .Profile_image {
     height: 300px;
     border-radius: 4px;
+    margin-right: 20px;
+    margin-bottom: 20px;
 
     & img {
       height: 100%;
@@ -18,7 +20,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-left: 20px;
+    // margin-left: 20px;
   }
 
   & .Name {
